user's state implementation
