# api/swagger/http-api.yaml
@@ -68,6 +68,22 @@ paths:
       tags:
       - Auth
 
+  /users/state/{uid}:
+    get:
+      produces:
+        - application/json
+      parameters:
+        - name: uid
+          in: path
+          description: User ID
+          type: integer
+          required: true
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#/definitions/UserState'
+
 definitions:
   ErrorResponse:
     properties:
@@ -117,6 +133,7 @@ definitions:
         description: User's ID in the system
         example: '545648798'
         type: integer
+        format: int64
       firstname:
         description: User's first name
         example: 'John'
@@ -150,6 +167,42 @@ definitions:
     properties:
       user:
         $ref: '#/definitions/User'
+
+  UserState:
+    properties:
+      uid:
+        description: User's ID in the system
+        example: '545648798'
+        type: integer
+        format: int64
+      nickname:
+        description: Generated nickname in the system
+        example: 'John'
+        type: string
+      exp:
+        description: User's ID exp points in the system
+        example: '545648798'
+        type: integer
+        format: int64
+      game_id:
+        description: Game's ID (if game_id == 0 then user in the lobby)
+        example: '545648798'
+        type: integer
+        format: int32
+
+  UserStateRequest:
+    required: [ uid ]
+    properties:
+      uid:
+        description: User's ID
+        example: '100500'
+        type: integer
+        format: int64
+
+  UserStateResponse:
+    properties:
+      user_state:
+        $ref: '#/definitions/UserState'
 
 securityDefinitions:
   # X-API-Key: abcdef12345
