# internal/server/models/user_state_request.go
@@ -1,0 +1,72 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// UserStateRequest user state request
+//
+// swagger:model UserStateRequest
+type UserStateRequest struct {
+
+	// User's ID
+	// Example: 100500
+	// Required: true
+	UID *int64 `json:"uid"`
+}
+
+// Validate validates this user state request
+func (m *UserStateRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateUID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *UserStateRequest) validateUID(formats strfmt.Registry) error {
+
+	if err := validate.Required("uid", "body", m.UID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this user state request based on context it is used
+func (m *UserStateRequest) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *UserStateRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *UserStateRequest) UnmarshalBinary(b []byte) error {
+	var res UserStateRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
