# internal/server/restapi/operations/get_users_state_uid_responses.go
@@ -1,0 +1,58 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/rustwizard/balda/internal/server/models"
+)
+
+// GetUsersStateUIDOKCode is the HTTP code returned for type GetUsersStateUIDOK
+const GetUsersStateUIDOKCode int = 200
+
+/*GetUsersStateUIDOK OK
+
+swagger:response getUsersStateUidOK
+*/
+type GetUsersStateUIDOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.UserState `json:"body,omitempty"`
+}
+
+// NewGetUsersStateUIDOK creates GetUsersStateUIDOK with default headers values
+func NewGetUsersStateUIDOK() *GetUsersStateUIDOK {
+
+	return &GetUsersStateUIDOK{}
+}
+
+// WithPayload adds the payload to the get users state Uid o k response
+func (o *GetUsersStateUIDOK) WithPayload(payload *models.UserState) *GetUsersStateUIDOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get users state Uid o k response
+func (o *GetUsersStateUIDOK) SetPayload(payload *models.UserState) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetUsersStateUIDOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
